# stm32_cmake_example

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  STM32L452RETxP_FLASH.ld  cmake_test.ioc
Drivers/: CMakeLists.txt
Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Src/: CMakeLists.txt  gpio.c  main.cpp  stm32l4xx_it.c  tim.c  usart.c
aux/: STM32L452RETxP_FLASH.ld
ci/: exec.sh  setup.sh
cmake/: arm-gcc-flags.cmake
